--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "engines": {
+      "node": "16.14.0",
+      "npm": "8.3.1"
+    }
   },
   "author": "",
   "license": "ISC",
